# airflow-docker-rs

./: .env.template  .gitignore  Cargo.toml  Readme.md  diesel.toml  docker-compose.yaml
dags/: test_dag.py
logic/rust/web_scraper/: Cargo.toml  Dockerfile  main.rs
logic/rust/web_scraper/src/: lib.rs  models.rs  schema.rs
